number block overflow fixed

--- a/src/styl/modules/number-block.styl
+++ b/src/styl/modules/number-block.styl
@@ -29,6 +29,7 @@
     // margin 50px 0
     +below(1080px)
         height auto !important
+        overflow hidden
     
         
 .lt-ie11 .number-block
